# cca-stack

./: .gitignore  .gitmodules  automate.py  fig-llama-rmmdedup.py  fig-micro-ksm.py  fig-micro-latency.py  fig-micro-rate.py  fig-micro-rmmdedup.py  fig-micro-security.py  gen-run-vmm.cfg  gen-run-vmm.sh  gtest.c  guess.py  justfile  mem.sh  note.txt  pyrightconfig.json  time.py  visualize-latency.py  visualize-mem.py  visualize.py
llama-test/: CMakeLists.txt  llama-test.cpp  prompts.txt  toolchain-aarch64.cmake
